nginx/nginx-postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80

      - name: postgres
        image: postgres:10.4
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5432
