nginx/nginx-post-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: npsvc
spec:
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
  - name: postgress
    protocol: TCP
    port: 5432
    targetPort: 5432
